finish update to scripts.js

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <button type="submit" class="btn btn-warning">Ping Pong</button>
       </div>
     </form>
-      <div id="result">
-        <ul>
-          
+      <div>
+        <ul id="result">
+
         </ul>
       </div>
     </div>
